--- a/FideleWeb/Views/Shared/_Layout.cshtml
+++ b/FideleWeb/Views/Shared/_Layout.cshtml
@@ -20,10 +20,15 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Board" asp-action="Index">게시판</a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">회원명부</a>
+                        </li>
+
+                        <li class="nav-item ms-auto">
+                            <a class="nav-link btn btn-primary text-white px-3" asp-controller="Account" asp-action="Login">로그인</a>
                         </li>
                     </ul>
                 </div>
